--- a/How_to_build.html
+++ b/How_to_build.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.min.css">
     <title>Website</title>
     <style> body {
         background-color: #2d2d2d;
@@ -46,3 +46,6 @@
   <h3> - a soldering iron and cable (best if multiple different colors)</h3>
   <h3> - 101 switches and keycaps fitting to your desired design</h3>
   <h3> - a cable fitting to your Microcontroller or adapter</h3>
+  <h3> - 500mm of rubber or foam gaskets with a width of 2-3mm</h3>
+  <h3> - 31-62 6x2mm round magnets depending if your topcase is made from magnetic material</h3>
+  <h3> - dampening material to your desire (optional) </h3>
