--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.min.css">
     <title>Website</title>
     <style> body {
         background-color: #2d2d2d;
@@ -48,9 +48,9 @@
         <br>
         <h4> The keyboard consist of as shown in the image the case and the split main and numpadplate and the magnetically attached topcase. The bottomcase and topcase get attached by either gluing 6x2mm round magnet in reversed polarity to both cases or with a CNC'd steel (or any otheer magnetic material) topcase with only one set of magnets.</h4>
         <br>
-        <h4> If you want your Build featured on the buildssubsction add a pull request on Github with your photo added as an attached file</h4>
+        <h4> If you want your Build featured on the buildssubsection add a pull request on Github with your photo added as an attached file</h4>
       </div>
-<!--31 bzw 62 magneten für assembly -->
+
 <body>
     
 </body>
