--- a/How_to_build.html
+++ b/How_to_build.html
@@ -25,7 +25,7 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
+          <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
           <li><a href="About.html" class="nav-link px-2 text-white">About</a></li>
           <li><a href="" class="nav-link px-2 text-white">Github</a></li>
           <li><a href="How_to_build.html" class="nav-link px-2 text-white">How To Build</a></li>
