--- a/About.html
+++ b/About.html
@@ -26,8 +26,8 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
-          <li><a href="About.html" class="nav-link px-2 text-white">About</a></li>
-          <li><a href="" class="nav-link px-2 text-white">Github</a></li>
+          <li><a class="nav-link px-2 text-white">About</a></li>
+          <li><a href="https://github.com/Mungkel/Delex99-Keyboard" class="nav-link px-2 text-white">Github</a></li>
           <li><a href="How_to_build.html" class="nav-link px-2 text-white">How To Build</a></li>
           <li><a href="builds.html" class="nav-link px-2 text-white">Builds</a></li>
         </ul>
