--- a/How_to_build.html
+++ b/How_to_build.html
@@ -21,7 +21,6 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -36,7 +35,7 @@
     </div>
   </header>
 
-  <div class="divider" style="padding-left: 20px;">
+  <div class="divider" style="padding-left: 20px; padding-right: 20px;">
   <h1> How To Build The Delex99</h1>
   <br>
   <br>
@@ -53,7 +52,14 @@
   <br>
   <h2> Building the keyboard:</h2>
   <br>
-  <h3> 1. Inserting the switches into the plate, align the switches to the plate a little force may be required, but then an audible snap should be hearable as the tooth from the switch grip unto the plate. </h3>
-  <h3> 2. Glue the magnets into the mounting holes. The mounting holes in the bottom case are marked with being holes and the topcase has slight indentations for the magnets.</h3>
-  <h3> 3. The gaskets need to be glued to bottomcase. In the bottomcase  </h3>
+  <h3> 1. Get the parts STL available on MakerWorld (for every download I get a certain amout of MakerWorld Coins to buy filament and 3d printers to make these projects work)</h3>
+  <h3> 2. Inserting the switches into the plate, align the switches to the plate a little force may be required, but then an audible snap should be hearable as the tooth from the switch grip unto the plate. </h3>
+  <h3> 3. Glue the magnets into the mounting holes. The mounting holes in the bottom case are marked with being holes and the topcase has slight indentations for the magnets.</h3>
+  <h3> 4. The gaskets need to be glued to bottomcase. In the bottomcase you can add your optional dampening material</h3>
+  <h3> 5. Wire the Keyboard according to the wiring diagram under this step.</h3>
+  <img>
+  <h3> 6. download arduion IDE and the necessary packages for your microcontroller. Open the firmware file and upload it to the microcontroller</h3>
+  <h3> 6.1. customise the keymap by working in the keymap file</h3>
+  <h3> 7. place the plates inside the case and attach the topcase</h3>
+  <h3> enjoy your board</h3>
 </div>
