--- a/About.html
+++ b/About.html
@@ -37,5 +37,6 @@
 <body>
   <h1> About the creator</h1>
   <h3> I am Mungkel and I was some time ago really submerge in the whole mechanical keyboards thing, though I never bought one. As I grew more </h3>
-</body>
   <div class="divider"></div>
+</body>
+</html>
