--- a/About.html
+++ b/About.html
@@ -35,5 +35,6 @@
       </div>
     </div>
   </header>
-
+  <h1> About the creator</h1>
+  <h3> I am Mungkel and I was some time ago really submerge in the whole mechanical keyboards thing, though I never bought one. As I grew more </h3>
   <div class="divider"></div>
