--- a/How_to_build.html
+++ b/How_to_build.html
@@ -36,7 +36,7 @@
     </div>
   </header>
 
-  <div class="divider"></div>
+  <div class="divider" style="padding-left: 20px; padding-right: 20px;"></div>
   <h1> How To Build The Delex99</h1>
   <br>
   
@@ -44,8 +44,23 @@
   <h3> - Microcontroller with more 25 digital pins or more, I used a teensy 4.1</h3>
   <h3> - either a large 3d printer or access to a 3d printing service like PCBway (not sponsored, there other services) or a CNC if you're really fancy and want to make it from metal</h3>
   <h3> - a soldering iron and cable (best if multiple different colors)</h3>
-  <h3> - 101 switches and keycaps fitting to your desired design</h3>
+  <h3> - 101 MX-style switches and keycaps fitting to your desired design</h3>
   <h3> - a cable fitting to your Microcontroller or adapter</h3>
   <h3> - 500mm foam or rubber gaskets that are 2-3mm wide</h3>
   <h3> - 62 6x2 round magnets for the case (31 if the topcase is made from a magnetic material)</h3>
-  <h3> (optional) dampening material for the case</h3>
+  <h3> (optional) dampening material for the case</h3> <h3> - diodes for every row</h3>
+  <h3> - dampening material to your desire (optional) </h3>
+  <br>
+  <h2> Building the keyboard:</h2>
+  <br>
+  <h3> 1. Get the parts STL available on MakerWorld (for every download I get a certain amout of MakerWorld Coins to buy filament and 3d printers to make these projects work)</h3>
+  <h3> 2. Inserting the switches into the plate, align the switches to the plate a little force may be required, but then an audible snap should be hearable as the tooth from the switch grip unto the plate. </h3>
+  <h3> 3. Glue the magnets into the mounting holes. The mounting holes in the bottom case are marked with being holes and the topcase has slight indentations for the magnets.</h3>
+  <h3> 4. The gaskets need to be glued to bottomcase. In the bottomcase you can add your optional dampening material</h3>
+  <h3> 5. Wire the Keyboard according to the wiring diagram under this step.</h3>
+  <img>
+  <h3> 6. download arduion IDE and the necessary packages for your microcontroller. Open the firmware file and upload it to the microcontroller</h3>
+  <h3> 6.1. customise the keymap by working in the keymap file</h3>
+  <h3> 7. place the plates inside the case and attach the topcase</h3>
+  <h3> enjoy your board</h3>
+</div>
