--- a/About.html
+++ b/About.html
@@ -21,6 +21,7 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -34,8 +35,5 @@
       </div>
     </div>
   </header>
-<body>
-  <h1> About the creator</h1>
-  <h3> I am Mungkel and I was some time ago really submerge in the whole mechanical keyboards thing, though I never bought one. As I grew more </h3>
-</body>
+
   <div class="divider"></div>
