--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -40,7 +41,7 @@
   <br>
     <h3> This keyboard had the priority to be an allrounder</h3>
       <img style="padding-left: 30px;" src="KEYBOARD HANDWIRED v22.png" width="50%">
-      <div style="padding-left: 30px;">
+      <div class="hallo" style="padding-left: 30px;">
         <h3>  99% gasket mount southpaw with inversed numpad</h3>
         <h4> inspired by CAD and Gaming</h4>
         <h4> When I designed the board I thought about my habit to game, which preferred mousespace, well for my CAD usage I'd enjoy if I had a numpad. Due to these requirements I put the numpad on the left to making it southpaw, but for my muscle memory I thought it'd be best if the numpad was just like the left hand that now operates it mirrored to the right. Due to the fact, that I do not know how popular this is going to be I design no PCB, meaning this keyboard has to handwired.</h4>
