--- a/How_to_build.html
+++ b/How_to_build.html
@@ -36,7 +36,7 @@
     </div>
   </header>
 
-  <div class="divider" style="padding-left: 20px;">
+  <div class="divider"></div>
   <h1> How To Build The Delex99</h1>
   <br>
   <br>
@@ -44,16 +44,8 @@
   <h3> - Microcontroller with more 25 digital pins or more, I used a teensy 4.1</h3>
   <h3> - either a large 3d printer or access to a 3d printing service like PCBway (not sponsored, there other services) or a CNC if you're really fancy and want to make it from metal</h3>
   <h3> - a soldering iron and cable (best if multiple different colors)</h3>
-  <h3> - 101 MX-style switches and keycaps fitting to your desired design</h3>
+  <h3> - 101 switches and keycaps fitting to your desired design</h3>
   <h3> - a cable fitting to your Microcontroller or adapter</h3>
   <h3> - 500mm of rubber or foam gaskets with a width of 2-3mm</h3>
   <h3> - 31-62 6x2mm round magnets depending if your topcase is made from magnetic material</h3>
-  <h3> - diodes for every row</h3>
   <h3> - dampening material to your desire (optional) </h3>
-  <br>
-  <h2> Building the keyboard:</h2>
-  <br>
-  <h3> 1. Inserting the switches into the plate, align the switches to the plate a little force may be required, but then an audible snap should be hearable as the tooth from the switch grip unto the plate. </h3>
-  <h3> 2. Glue the magnets into the mounting holes. The mounting holes in the bottom case are marked with being holes and the topcase has slight indentations for the magnets.</h3>
-  <h3> 3. The gaskets need to be glued to bottomcase. In the bottomcase  </h3>
-</div>
