--- a/How_to_build.html
+++ b/How_to_build.html
@@ -48,4 +48,12 @@
   <h3> - a cable fitting to your Microcontroller or adapter</h3>
   <h3> - 500mm of rubber or foam gaskets with a width of 2-3mm</h3>
   <h3> - 31-62 6x2mm round magnets depending if your topcase is made from magnetic material</h3>
+  <h3> - diodes for every row</h3>
   <h3> - dampening material to your desire (optional) </h3>
+  <br>
+  <h2> Building the keyboard:</h2>
+  <br>
+  <h3> 1. Inserting the switches into the plate, align the switches to the plate a little force may be required, but then an audible snap should be hearable as the tooth from the switch grip unto the plate. </h3>
+  <h3> 2. Glue the magnets into the mounting holes. The mounting holes in the bottom case are marked with being holes and the topcase has slight indentations for the magnets.</h3>
+  <h3> 3. The gaskets need to be glued to bottomcase. In the bottomcase  </h3>
+</div>
