hä warum funktioniert img nicht

--- a/About.html
+++ b/About.html
@@ -35,5 +35,8 @@
       </div>
     </div>
   </header>
-
+  <h1> About the creator</h1>
+  <h3> I am Mungkel and I was some time ago really submerge in the whole mechanical keyboards thing, though I never bought one. As I grew more and more into the DIY-Scene of tech in general I decided to go my keyboard problem head on. As I began thinging finding the best layout I came up with this final keymap</h3>
+  <br>
+  <img style="padding-left: 30px;" src="/Photos/keymap.png" width="50%">
   <div class="divider"></div>
