--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h1>Delex99 a 3D printed fully open source keyboard</h1>
   <br>
     <h3> This keyboard had the priority to be an allrounder</h3>
-      <img style="padding-left: 30px;" src="/Photos/homapage_render.png" width="50%">
+      <img style="padding-left: 30px;" src="Photos\homapage_render.png" width="50%">
       <div class="hallo" style="padding-left: 30px; padding-right: 20px;">
         <h3>  99% gasket mount southpaw with inversed numpad</h3>
         <h4> inspired by CAD and Gaming</h4>
